Fix text-wrap to text-align in service styles

--- a/styles/index-style/services.css
+++ b/styles/index-style/services.css
@@ -25,7 +25,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  text-wrap: balance;
+  text-align: center;
   font-size: large;
   cursor: pointer;
   font-style: italic;
@@ -48,3 +48,4 @@
   border-width: 2px;
 
 }
+
